# Cpp

./: README.md
IMK/: AddCargo.qml  AddDriver.qml  AddRoute.qml  AddTrip.qml  AddTruck.qml  CMakeLists.txt  CargosTable.qml  DriversTable.qml  EditCargo.qml  EditDriver.qml  EditTrip.qml  EditTruck.qml  Main.qml  README.md  RemoveDriver.qml  RemoveRoutes.qml  RemoveTruck.qml  RoutesTable.qml  TripsTable.qml  TrucksTable.qml  databasemanager.cpp  databasemanager.h  driversmodel.cpp  driversmodel.h  main.cpp
Lab_N1/: 1-1.cpp  1-3.cpp  1-5.cpp  1-7.cpp  1-9.cpp  2-1.cpp  2-3.cpp  2-5.cpp  2-7.cpp  2-9.cpp  3-1.cpp  3-3.cpp  3-5.cpp  3-7.cpp  3-9.cpp  4-1.cpp  4-3.cpp  4-5.cpp  4-7.cpp  4-9.cpp  README.md
Lab_N2/: README.md
Lab_N2/1-6/: 1-6.cpp  double_value.cpp  double_value.h
Lab_N2/10-1/: 10-1.cpp
Lab_N2/2-5/: 2-5.cpp  solution.cpp  solution.h
Lab_N2/3-11/: 3-11.cpp  solution.cpp  solution.h
Lab_N2/4-5/: 4-5.cpp
Lab_N2/5-5/: 5-5.cpp
Lab_N2/6-5/: 6-5.cpp
Lab_N2/7-2/: 7-2.cpp
Lab_N2/8-2/: 8-2.cpp  solution.cpp  solution.h
Lab_N2/9-1/: 9-1.cpp
Lab_N3/: README.md
Lab_N3/1-1/: 1-1.cpp  Point.cpp  Point.h
Lab_N3/1-3/: 1-3.cpp  Name.cpp  Name.h
Lab_N3/2-1/: 2-1.cpp  Line.cpp  Line.h
Lab_N3/3-3/: 3-3.cpp  City.h
Lab_N3/4-8/: 4-8.cpp  City.cpp  City.h
Lab_N3/5-5/: 5-5.cpp  fraction.cpp  fraction.h
Lab_N4/: LineSegment.cpp  LineSegment.h  README.md  zadanie.cpp
Lab_N5/: Laba5.cpp  Laba5.h  README.md
Lab_N5/1-5/: 1-5.cpp  Laba5.cpp  Laba5.h  result.txt
Lab_N5/2-5/: 2-5.cpp  Laba5.cpp  Laba5.h
Lab_N5/3-5/: 3-5.cpp  Laba5.cpp  Laba5.h
Lab_N5/4-5/: 4-5.cpp  Laba5.cpp  numbers.txt
Lab_N5/5-5/: 5-5.cpp  Laba5.cpp  Laba5.h  numbers.txt
Lab_N5/6-5/: 6-5.cpp  Laba5.cpp  Laba5.h  res.txt  text.txt
Lab_N6/: Dictionary.h  HashSet.h  Point.h  README.md  main.cpp  workers.txt
